--- a/netcore/Views/Product/Index.cshtml
+++ b/netcore/Views/Product/Index.cshtml
@@ -9,60 +9,63 @@
 <table class="table table-hover table-striped">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.productCode)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.productName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.barcode)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.serialNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.productType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.uom)
-                </th>
             <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.productCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.productName)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.description)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.barcode)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.serialNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.productType)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.uom)
+            </th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.productCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.productName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.barcode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.serialNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.productType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.uom)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.productId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.productId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.productId"><i class="fa fa-trash"></i></a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.productId"><i class="fa fa-pencil"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.productId"><i class="fa fa-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.productId"><i class="fa fa-trash"></i></a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.productCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.productName)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.barcode)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.serialNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.productType)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.uom)
+                </td>
+
+            </tr>
+        }
     </tbody>
 </table>
