--- a/netcore/Views/Customer/Details.cshtml
+++ b/netcore/Views/Customer/Details.cshtml
@@ -98,7 +98,9 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">customerId</th>
+                                    <th class="col-lg-3">First Name</th>
+                                    <th class="col-lg-3">Last Name</th>
+                                    <th class="col-lg-3">Job Title</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -111,7 +113,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-12">
-                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","CustomerLine", new { masterid = Model.customerId })')"><i class="fa fa-plus"></i> Add New CustomerLine</a>
+                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","CustomerLine", new { masterid = Model.customerId })')"><i class="fa fa-plus"></i> Add New Contact</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +150,9 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "customerLineId" },
+                    { "data": "firstName" },
+                    { "data": "lastName" },
+                    { "data": "jobTitle" },
                     {
                         "data": "customerLineId",
                         "render": function (data) {
