--- a/netcore/Views/Receiving/Create.cshtml
+++ b/netcore/Views/Receiving/Create.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_AdminlteNetcoreCreate.cshtml";
 }
 
-
+@Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
 <div class="row">
     <div class="col-md-12">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
