--- a/netcore/Views/SalesOrder/Delete.cshtml
+++ b/netcore/Views/SalesOrder/Delete.cshtml
@@ -104,7 +104,7 @@
             @Html.DisplayNameFor(model => model.customer)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.customer.customerId)
+            @Html.DisplayFor(model => model.customer.customerName)
         </dd>
     </dl>
 
