--- a/netcore/Views/SalesOrder/Details.cshtml
+++ b/netcore/Views/SalesOrder/Details.cshtml
@@ -108,7 +108,7 @@
                               @Html.DisplayNameFor(model => model.customer)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.customer.customerId)
+                              @Html.DisplayFor(model => model.customer.customerName)
                           </dd>
                       </dl>                                   
                 </div>
@@ -140,7 +140,9 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">salesOrderId</th>
+                                    <th class="col-lg-3">Product</th>
+                                    <th class="col-lg-3">Qty</th>
+                                    <th class="col-lg-3">Price</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -190,7 +192,9 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "salesOrderLineId" },
+                    { "data": "product.productCode" },
+                    { "data": "qty" },
+                    { "data": "price" },
                     {
                         "data": "salesOrderLineId",
                         "render": function (data) {
