--- a/netcore/Views/SalesOrder/Edit.cshtml
+++ b/netcore/Views/SalesOrder/Edit.cshtml
@@ -28,9 +28,9 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label asp-for="salesOrderStatus" class="control-label"></label>
-                    <select asp-for="salesOrderStatus" class="form-control select2" asp-items="Html.GetEnumSelectList<netcore.Models.Invent.SalesOrderStatus>()"></select>
-                    <span asp-validation-for="salesOrderStatus" class="text-danger"></span>
+                    <label asp-for="branchId" class="control-label"></label>
+                    <select asp-for="branchId" class="form-control select2" asp-items="ViewBag.branchId"></select>
+                    <span asp-validation-for="branchId" class="text-danger"></span>
                 </div>
             </div>
         </div>
@@ -66,10 +66,21 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="description" class="control-label"></label>
-            <input asp-for="description" class="form-control" />
-            <span asp-validation-for="description" class="text-danger"></span>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="salesOrderStatus" class="control-label"></label>
+                    <select asp-for="salesOrderStatus" class="form-control select2" asp-items="Html.GetEnumSelectList<netcore.Models.Invent.SalesOrderStatus>()"></select>
+                    <span asp-validation-for="salesOrderStatus" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="description" class="control-label"></label>
+                    <input asp-for="description" class="form-control" />
+                    <span asp-validation-for="description" class="text-danger"></span>
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <label asp-for="deliveryAddress" class="control-label"></label>
