--- a/netcore/Views/Shipment/Edit.cshtml
+++ b/netcore/Views/Shipment/Edit.cshtml
@@ -81,17 +81,12 @@
                 <div class="form-group">
                     <label asp-for="warehouseId" class="control-label"></label>
                     <select asp-for="warehouseId" class="form-control select2" asp-items="ViewBag.warehouseId"></select>
+                    <span asp-validation-for="warehouseId" class="text-danger"></span>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-
 
 
             @section Scripts {
