--- a/netcore/Views/TransferIn/Create.cshtml
+++ b/netcore/Views/TransferIn/Create.cshtml
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row hidden">
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="warehouseIdFrom" class="control-label"></label>
