--- a/netcore/Views/TransferOut/Create.cshtml
+++ b/netcore/Views/TransferOut/Create.cshtml
@@ -60,18 +60,18 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row hidden">
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="warehouseIdFrom" class="control-label"></label>
-                    <select asp-for="warehouseIdFrom" class="form-control select2" asp-items="ViewBag.warehouseIdFrom"></select>
+                    <select disabled asp-for="warehouseIdFrom" class="form-control select2" asp-items="ViewBag.warehouseIdFrom"></select>
                     <span asp-validation-for="warehouseIdFrom" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="warehouseIdTo" class="control-label"></label>
-                    <select asp-for="warehouseIdTo" class="form-control select2" asp-items="ViewBag.warehouseIdTo"></select>
+                    <select disabled asp-for="warehouseIdTo" class="form-control select2" asp-items="ViewBag.warehouseIdTo"></select>
                     <span asp-validation-for="warehouseIdTo" class="text-danger"></span>
                 </div>
             </div>
